--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+
 langchain
+
+langchain-community 
+langchain-huggingface 
+langchain-google-genai
 google-generativeai
-faiss-cpu
+faiss-cpu 
 streamlit
 requests
 sentence-transformers
+
